styles.css
/*Navbar formating */
.navbar {
    background-color: white!important;
}

.navbar-brand img {
    height: 30px;
}

.nav-link {
    font-family: "Overpass-Mono", monospace;
}

.btn-outline-info {
    font-family: "Overpass-Mono", monospace;
}

.nav-item {
    color: #00471b!important
}

/*Jumbotron formating */
.jumbotron {
    background-color: #eee1c6;
}

.display-4 {
    color: #0077c0!important;
    font-family: "Overpass-Mono", monospace;
    font-weight: 700;
}

.lead {
    color: #0077c0!important;
}

.my-4 {
    color: #0077c0!important;
}

.btn-primary {
    font-family: "Overpass-Mono", monospace;
}

/*Grid formating */
.img-fluid {
    border-radius: 5px;
}

.form-text {
    font-family: "Overpass-Mono", monospace;
}

.form-group {
    font-family: "Overpass-Mono", monospace;
}

/*Non-component formating */
.list-unstyled {
    font-family: "Overpass-Mono", monospace;
}

/*Embedded YouTube Video */
.iframe-container{
    position: relative;
    width: 100%;
    padding-bottom: 56.25%; 
    height: 0;
  }
  .iframe-container iframe{
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
  }

/*Tables formating */
.table {
    table-layout: fixed;
    color: #00471b!important;
}
  
/*Non-component formating */
body {
    background-color: white
}

h1 {
    color: #00471b!important;
    font-family: 'Overpass-Mono', monospace;
    font-weight: 700;
}

h3 {
    color: #0077c0!important;
    font-family: "Overpass-Mono", monospace;
    font-weight: 700;
}

h4 {
    color: #00471b!important;
    font-family: 'Overpass-Mono', monospace;
    font-weight: 700;
}

h5 {
    color: #00471b!important;
    font-family: "Overpass-Mono", monospace;
}

h6 {
    color: #0077c0!important;
    font-family: "Overpass-Mono", monospace;
}

p {
    color: #00471b!important;
    font-family: "Overpass-Mono", monospace;
}

